# pico-projects

./: .gitignore  CMakeLists.txt  README.md
AutoLightStrip/: CMakeLists.txt  autoLightStrip.c  autoLightStrip.pio  colours.c  colours.h
PIO/: CMakeLists.txt
PIO/FirstPioProgram/: CMakeLists.txt  hello.c  hello.pio
PIO/ws2812/: CMakeLists.txt  ws2812.c
PIO/ws2812_multi/: CMakeLists.txt  ws2812_multi copy.c  ws2812_multi.c  ws2812_multi.pio
PIR/: CMakeLists.txt  pirTest.c
adcTest/: CMakeLists.txt  adcTest.c
blink/: CMakeLists.txt  blink.c
dma/: CMakeLists.txt  dma.c  dma.pio
lcd_uart/: CMakeLists.txt  lcd_uart.c  lcd_uart.pio
